--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -2,12 +2,13 @@
 @model IEnumerable<MyWebsite.Models.BudgetProject.BudgetItems>
 @using MyWebsite.Models.BudgetProject
 
-@{ string user = User.Identity.Name;}
-
+@{  
+    string user = User.Identity.Name;
+    int budgetMonth = 9; //DateTime.Now.Month
+}
 
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h5 style="text-align:center; color:#76ff03; margin-top:10px;">@TempData["successTransactionAdded"]</h5>
 <h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
@@ -22,11 +23,12 @@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.costError</p>
+        <p style="text-align:center; font-weight:bold; color:#76ff03; margin-top:10px;">@TempData["successTransactionAdded"]</p>
     </div>
     <div class="row">
         <div class="col s12 m12 l4"></div>
         <form asp-action="AddTransaction" class="col s12 m12 l4 center" style="background-color:#212121">
-            <div class="input-field col s12" style="color:#D50000 !important; margin-bottom:35px; margin-top:35px;">
+            <div class="input-field col s12" style="margin-bottom:35px; margin-top:35px;">
                 <select name="TypeOfBudget">
                     <option value="0" disabled selected>Select a Category</option>
                     <option value="1">Grocery</option>
@@ -50,6 +52,7 @@
                 @Html.Hidden("Cost", "Cost")
                 @Html.Hidden("TypeOfBudget", "TypeOfBudget")
                 @Html.Hidden("Date", DateTime.Now)
+                @Html.Hidden("Month", budgetMonth)
                 <div style="margin-top:23px;"><button type="submit" class="btn-floating btn-large waves-effect waves-light;" style="background-color:#cfd8dc !important;"><i class="material-icons" style="font-weight:bold; color: #212121 !important;">add</i></button>@*<input type="submit" style="cursor:pointer" value="ADD" class="grey-button" />*@</div>
             </div>
         </form>
@@ -67,13 +70,13 @@
             <th>Price</th>
         </tr>
         @{ int count = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
             if (Convert.ToInt32(item.TypeOfBudget) == 1)
             {
                 count += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
@@ -96,13 +99,13 @@
             <th>Price</th>
         </tr>
         @{ int countH = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
             if (Convert.ToInt32(item.TypeOfBudget) == 2)
             {
                 countH += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
@@ -124,14 +127,14 @@
             <th>Price</th>
         </tr>
         @{ int countB = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
 
             if (Convert.ToInt32(item.TypeOfBudget) == 3)
             {
                 countB += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
@@ -153,13 +156,13 @@
             <th>Price</th>
         </tr>
         @{ int countE = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
             if (Convert.ToInt32(item.TypeOfBudget) == 4)
             {
                 countE += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
@@ -181,13 +184,13 @@
             <th>Price</th>
         </tr>
         @{ int countGas = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
             if (Convert.ToInt32(item.TypeOfBudget) == 5)
             {
                 countGas += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
@@ -209,13 +212,13 @@
             <th>Price</th>
         </tr>
         @{ int countM = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
         {
             if (Convert.ToInt32(item.TypeOfBudget) == 6)
             {
                 countM += 1;
                 <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("dd/MM/yyyy")</td>
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
                     <td>@item.Description</td>
                     <td>@item.Cost</td>
                 </tr>
