Set new budget to previous month's budget limit

--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -4,7 +4,7 @@
 
 @{  
     string user = User.Identity.Name;
-    int budgetMonth = 9; //DateTime.Now.Month
+    int budgetMonth = DateTime.Now.Month;
 }
 
 
