--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -30,6 +30,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Email" />
+            <input type="hidden" asp-for="Month" />
             <div class="col s12 m3 l3"></div>
             <div class="form-group col s12 m3 l3">
                 <label for="GroceryLimit" style="color:#cfd8dc;; font-weight:bold; font-size:25px;">Grocery Budget</label>
