started view past budgets

--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model MyWebsite.Models.BudgetProject.BudgetItems*@
-@model IEnumerable<MyWebsite.Models.BudgetProject.BudgetItems>
+﻿@model IEnumerable<MyWebsite.Models.BudgetProject.BudgetItems>
 @using MyWebsite.Models.BudgetProject
 
 @{  
