--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -268,26 +268,29 @@
     }
 
     .select-dropdown li.disabled, .select-dropdown li.disabled > span, .select-dropdown li.optgroup {
-        color: #b2dfdb !important;
+        color: black !important;
         font-weight: bold;
         text-align: center;
     }
 
     .select-wrapper input.select-dropdown {
-        color: #b2dfdb !important;
+        border-bottom: none!important; 
+    }
+
+    .select-wrapper input.select-dropdown {
+        color: #cfd8dc !important;
         font-weight: bold !important;
         font-size: 25px;
         text-align: center;
-        border: 1px solid #cfd8dc !important;
+        background-color: black !important;
         padding-top: 10px;
-        padding-bottom: 10px;
+       padding-bottom: 10px;
     }
 
     .select-wrapper input.select-dropdown:hover{
         
-            background-color: #cfd8dc !important;
-            border: none;
-            color: #212121 !important;
+            background-color: black !important;
+            color: #76ff03 !important;
     }
 
     .trashcan-icon {
