--- a/MyWebsite/Views/Budgets/Index.cshtml
+++ b/MyWebsite/Views/Budgets/Index.cshtml
@@ -22,7 +22,7 @@
 }
 
 <div style="text-align:center; margin-top:180px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h3 style="text-align:center; color:black; margin-top:100px;">Budget App</h3>
+<h3 style="text-align:center; color:#cfd8dc; font-weight: bold; margin-top:100px;">The Painless Budget</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
 @if (!SignInManager.IsSignedIn(User))
@@ -425,7 +425,7 @@ else
                     bold: true,
                     fontName: 'arial',
                 }
-                , title: 'Groceries/Food',
+                , title: 'Food/Groceries',
                 colors: ['#e6c5c4', '#6cb7b1'],
                 pieHole: 0.5,
                 backgroundColor: '#212121',
