--- a/MyWebsite/Views/Budgets/AddTransaction.cshtml
+++ b/MyWebsite/Views/Budgets/AddTransaction.cshtml
@@ -8,7 +8,7 @@
 
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
+<h3 style="text-align:center; font-weight:bold; color:#cfd8dc; margin-top:100px;">The Painless Budget</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
 
@@ -17,7 +17,7 @@
         <a href='@Url.Action("Index", "Budgets", new { userName = user })'; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
         @*@Html.ActionLink("Return to Budget", "Index", "Budgets", new { userName = user }, new { @class = "grey-button" })*@
     </div>
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h5>
+    <h4 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">Add Transaction</h4>
     @*Validation Errors*@
     <div class="container" style="margin-top:20px;">
         <p style="font-weight:bold; color:#D50000; text-align:center">@ViewBag.typeError</p>
@@ -29,7 +29,7 @@
         <form asp-action="AddTransaction" class="col s12 m12 l4 center" style="background-color:#212121">
             <div class="input-field col s12" style="margin-bottom:35px; margin-top:35px;">
                 <select name="TypeOfBudget">
-                    <option value="0" disabled selected>Select a Category</option>
+                    <option value="0" disabled selected>Select a Category </option>
                     <option value="1">Grocery</option>
                     <option value="2">Housing</option>
                     <option value="3">Bills</option>
@@ -59,7 +59,7 @@
     </div>
 </div>
 
-@*<form asp-action="Delete">*@  
+@*View Transactions*@
 <div class="container center" style="margin-top:35px; margin-bottom:250px;">
     <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#cfd8dc; text-align:center">View Past Transaction</h5>
     <a class="waves-effect waves-light btn-large sharpCorners grey darken-4" id="transaction-btnG" style="font-weight:bold; font-size:20px;"><i class="material-icons left">local_dining</i>Grocery</a>
@@ -71,21 +71,15 @@
                 <th></th>
             </tr>
             @{ int count = 0;}
-            @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
-            {
-
-                if (Convert.ToInt32(item.TypeOfBudget) == 1)
-                {
-                    count += 1;
-            <tr style="border-bottom: 1px dotted #cfd8dc">
-                <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                <td>@item.Description</td>
-                <td>@item.Cost</td>
-                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-            </tr>
-                }
-
-
+            @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 1).OrderBy(x => x.Date))
+            {               
+                count += 1;
+                <tr style="border-bottom: 1px dotted #cfd8dc">
+                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                    <td>@item.Description</td>
+                    <td>@item.Cost</td>
+                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+                </tr>            
             }
 
             @if (count == 0)
@@ -104,18 +98,15 @@
             <th></th>
         </tr>
         @{ int countH = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
-        {
-            if (Convert.ToInt32(item.TypeOfBudget) == 2)
-            {
-                countH += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-                </tr>
-            }
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 2).OrderBy(x => x.Date))
+        {          
+            countH += 1;
+            <tr style="border-bottom: 1px dotted #cfd8dc">
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>
         }
         @if (countH == 0)
         {
@@ -134,20 +125,15 @@
             <th></th>
         </tr>
         @{ int countB = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 3).OrderBy(x => x.Date))
         {
-
-            if (Convert.ToInt32(item.TypeOfBudget) == 3)
-            {
-                countB += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-
-                </tr>
-            }
+            countB += 1;
+            <tr style="border-bottom: 1px dotted #cfd8dc">
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>
         }
         @if (countB == 0)
         {
@@ -166,19 +152,15 @@
             <th></th>
         </tr>
         @{ int countE = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
-        {
-            if (Convert.ToInt32(item.TypeOfBudget) == 4)
-            {
-                countE += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-
-                </tr>
-            }
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 4).OrderBy(x => x.Date))
+        {           
+            countE += 1;
+            <tr style="border-bottom: 1px dotted #cfd8dc">
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>
         }
         @if (countE == 0)
         {
@@ -197,19 +179,15 @@
             <th></th>
         </tr>
         @{ int countGas = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 5).OrderBy(x => x.Date))
         {
-            if (Convert.ToInt32(item.TypeOfBudget) == 5)
-            {
-                countGas += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-
-                </tr>
-            }
+            countGas += 1;
+            <tr style="border-bottom: 1px dotted #cfd8dc">
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>
         }
         @if (countGas == 0)
         {
@@ -228,19 +206,15 @@
             <th></th>
         </tr>
         @{ int countM = 0;}
-        @foreach (var item in Model.Where(x => x.Email == user).Where(x => x.Month == budgetMonth).OrderBy(x => x.Date))
-        {
-            if (Convert.ToInt32(item.TypeOfBudget) == 6)
-            {
-                countM += 1;
-                <tr style="border-bottom: 1px dotted #cfd8dc">
-                    <td>@item.Date.ToString("MM/dd/yyyy")</td>
-                    <td>@item.Description</td>
-                    <td>@item.Cost</td>
-                    <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
-
-                </tr>
-            }
+        @foreach (var item in Model.Where(x => Convert.ToInt32(x.TypeOfBudget) == 6).OrderBy(x => x.Date))
+        {            
+            countM += 1;
+            <tr style="border-bottom: 1px dotted #cfd8dc">
+                <td>@item.Date.ToString("MM/dd/yyyy")</td>
+                <td>@item.Description</td>
+                <td>@item.Cost</td>
+                <td><a href='@Url.Action("DeleteTransaction", "Budgets", new { id = item.TransactionId })'><i class="material-icons left trashcan-icon">delete</i></a></td>
+            </tr>
         }
         @if (countM == 0)
         {
@@ -293,30 +267,15 @@
             color: #76ff03 !important;
     }
 
-    .trashcan-icon {
+    .trashcan-icon{
         color: #cfd8dc !important;
+
     }
 
     .trashcan-icon:hover {
         color: #76ff03 !important;
     }
 
-    /*.grey-button {
-        border-radius: 0px;
-        border: 1px solid #cfd8dc;
-        color: #b2dfdb;
-        padding: 15px;
-        background-color: #212121;
-        font-weight: 400;
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .grey-button:hover {
-        background-color: #cfd8dc;
-        border: none;
-        color: #212121 !important;
-    }*/
 </style>
 
 <script>
