--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MyWebsite.Models.BudgetProject.Budget
 @using System.Linq;
+@using System.ComponentModel.DataAnnotations.Schema;
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,78 +16,66 @@
 
 
 <div style="text-align:center; margin-top:80px;"><p style="text-align:center;">@Html.Partial("_LoginPartial")</p></div>
-<h3 style="text-align:center; color:#cfd8dc; margin-top:100px;">Budget App</h3>
+<h3 style="text-align:center; color:#cfd8dc; font-weight: bold; margin-top:100px;">The Painless Budget</h3>
 <div style="border-bottom: 1px dotted #cfd8dc;"></div>
 
 <div class="container">
-    <div style="margin-top:55px; text-align:center;">
-        <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
-    </div>
-    <h5 style="margin-top:55px; margin-bottom:25px; font-weight:bold; color:#b2dfdb; text-align:center">Edit Budget Limits</h5>
-
     <form asp-action="Edit">
-
         <div class="row">
+            <div class="col l12 m12 s12" align="center" style="margin-top:55px;">
+                <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+
+                <button class="aves-effect waves-light btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px;" type="submit" name="Save">
+                    <i class="material-icons left">save</i>Save
+                </button>
+            </div>
+        </div>
+
+        <h4 style="margin-top:55px; margin-bottom:35px; font-weight:bold; color:#b2dfdb; text-align:center">Edit Budget Limits</h4>
+
+        <div class="row" align="center">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="Email" />
             <input type="hidden" asp-for="Month" />
-            <div class="col s12 m3 l3"></div>
-            <div class="form-group col s12 m3 l3">
-                <label for="GroceryLimit" style="color:#cfd8dc;; font-weight:bold; font-size:25px;">Grocery Budget</label>
-                <input asp-for="GroceryLimit" class="form-control" />
-                <span asp-validation-for="GroceryLimit" class="text-danger"></span>
-            </div>
-            <div class="form-group col s12 m3 l3">
-                <label for="HousingLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Housing/Rent Budget</label>
-                @*<label asp-for="HousingLimit" class="control-label"></label>*@
-                <input asp-for="HousingLimit" class="form-control" />
-                <span asp-validation-for="HousingLimit" class="text-danger"></span>
-            </div>
-            <div class="col s12 m3 l3"></div>
-        </div>
 
-        <div class="row">
-            <div class="col s12 m3 l3"></div>
-            <div class="form-group col s12 m3 l3">
-                <label for="EntLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Entertainment Budget</label>
-                @*<label asp-for="EntLimit" class="control-label"></label>*@
-                <input asp-for="EntLimit" class="form-control" />
-                <span asp-validation-for="EntLimit" class="text-danger"></span>
+            <div class="col s12">
+                <label for="GroceryLimit" style="color:#cfd8dc;; font-weight:bold; font-size:25px;">Food/Grocery Budget $</label>
+                <input asp-for="GroceryLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
             </div>
-            <div class="form-group col s12 m3 l3">
-                <label for="BillsLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Bills Budget</label>
-                @*<label asp-for="BillsLimit" class="control-label"></label>*@
-                <input asp-for="BillsLimit" class="form-control" />
-                <span asp-validation-for="BillsLimit" class="text-danger"></span>
-            </div>
-            <div class="col s12 m3 l3"></div>
-        </div>
 
-        <div class="row">
-            <div class="col s12 m3 l3"></div>
-            <div class="form-group col s12 m3 l3">
-                <label for="Gas" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Gas/Car Budget</label>
-                @*<label asp-for="GasLimit" class="control-label"></label>*@
-                <input asp-for="GasLimit" class="form-control" />
-                <span asp-validation-for="GasLimit" class="text-danger"></span>
+            <div class=" col s12">
+                <label for="HousingLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Housing/Rent Budget $</label>
+                <input asp-for="HousingLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
             </div>
-            <div class="form-group col s12 m3 l3">
-                <label for="MiscLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Miscellaneous Budget</label>
-                @*<label asp-for="MiscLimit" class="control-label"></label>*@
-                <input asp-for="MiscLimit" class="form-control" />
-                <span asp-validation-for="MiscLimit" class="text-danger"></span>
+
+            <div class="col s12 ">
+                <label for="EntLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Entertainment Budget $</label>
+                <input asp-for="EntLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
             </div>
-            <div class="col s12 m3 l3"></div>
-        </div>
+
+            <div class="col s12">
+                <label for="BillsLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Bills Budget $</label>
+                <input asp-for="BillsLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
+            </div>
 
 
-        <div style="margin-top:10px; text-align:center; margin-bottom:50px;">
-            <button class="aves-effect waves-light btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px;" type="submit" name="Save">
-                <i class="material-icons left">save</i>Save
-            </button>
+            <div class="col s12">
+                <label for="Gas" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Gas/Car Budget $</label>
+                <input asp-for="GasLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
+            </div>
+
+            <div class="col s12">
+                <label for="MiscLimit" style="color:#cfd8dc; font-weight:bold; font-size:25px;">Miscellaneous Budget $</label>
+                <input asp-for="MiscLimit" style="margin-left:2px; margin-top:15px; width:75px; text-align:center;" />
+            </div>
         </div>
     </form>
 </div>
 
 
+<style>
+    .field-validation-error {
+        display: none !important;
+    }
+</style>
