--- a/MyWebsite/Views/Budgets/Edit.cshtml
+++ b/MyWebsite/Views/Budgets/Edit.cshtml
@@ -23,9 +23,9 @@
     <form asp-action="Edit">
         <div class="row">
             <div class="col l12 m12 s12" align="center" style="margin-top:55px;">
-                <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
+                <a href='@Url.Action("Index", "Budgets", new { userName = user })' ; class="waves-effect waves-light btn-large sharpCorners grey darken-4" style="font-weight:bold; font-size:20px; margin-top:10px;"><i class="material-icons left">arrow_back</i>Return to Budget</a>
 
-                <button class="aves-effect waves-light btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px;" type="submit" name="Save">
+                <button class="aves-effect waves-light btn-large grey darken-4 sharpCorners" style="font-weight:bold; font-size:20px; margin-top:10px;" type="submit" name="Save">
                     <i class="material-icons left">save</i>Save
                 </button>
             </div>
